# pimsteward

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  PLAN.md  README.md  flake.nix
.config/: nextest.toml
docs/: api-findings.md  smoke-test-pass1.sh  smoke-test-pass2.sh  smoke-test-pass3.sh
docs/plans/: 2026-04-30-icloud-caldav-multi-provider.md  2026-04-30-icloud-caldav-multi-provider.md.tasks.json
docs/specs/: 2026-04-20-local-search-index-design.md  2026-04-30-icloud-caldav-multi-provider-design.md
examples/: config-icloud-caldav.toml  saturn-test.toml
nix/: module.nix
src/: config.rs  daemon.rs  error.rs  ical.rs  lib.rs  main.rs  permission.rs  safety.rs
src/forwardemail/: calendar.rs  client.rs  contacts.rs  mail.rs  managesieve.rs  mod.rs  sieve.rs  writes.rs
src/icloud/: caldav.rs  discovery.rs  mod.rs
src/index/: envelope.rs  mod.rs  rebuild.rs  search.rs
src/mcp/: mod.rs  server.rs
src/provider/: forwardemail.rs  icloud_caldav.rs  mod.rs
src/pull/: calendar.rs  contacts.rs  mail.rs  mod.rs  sieve.rs
src/restore/: bulk.rs  calendar.rs  contacts.rs  mail.rs  mod.rs  sieve.rs
src/source/: caldav.rs  carddav.rs  dav.rs  imap.rs  mod.rs  rest.rs  traits.rs
src/store/: mod.rs
src/write/: audit.rs  calendar.rs  contacts.rs  mail.rs  mod.rs  sieve.rs
tests/: e2e_bulk_restore.rs  e2e_caldav.rs  e2e_calendar.rs  e2e_carddav.rs  e2e_contacts.rs  e2e_imap.rs  e2e_mail.rs  e2e_restore_invariants.rs  e2e_safety.rs  e2e_send.rs  e2e_sieve.rs  icloud_caldav_test.rs  icloud_e2e.rs  integration_test.rs  mcp_http_auth.rs  mcp_http_profiles.rs
tests/common/: mod.rs
