[package]
name = "pimsteward"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Permission-aware MCP mediator for forwardemail.net (mail, calendar, contacts, sieve) with time-travel backup."
license = "MIT"
publish = false

[lib]
name = "pimsteward"
path = "src/lib.rs"

[[bin]]
name = "pimsteward"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
thiserror = "1"
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
figment = { version = "0.10", features = ["toml", "env"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
gix = { version = "0.66", default-features = false, features = [] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util", "macros"] }
insta = { version = "1", features = ["json", "yaml"] }
wiremock = "0.6"
tempfile = "3"
pretty_assertions = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3
