[package]
name = "pimsteward"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Permission-aware MCP mediator for forwardemail.net (mail, calendar, contacts, sieve) with time-travel backup."
license = "MIT"
publish = false

[lib]
name = "pimsteward"
path = "src/lib.rs"

[[bin]]
name = "pimsteward"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
thiserror = "1"
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
figment = { version = "0.10", features = ["toml", "env"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
gix = { version = "0.66", default-features = false, features = [] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
rmcp = { version = "1.3.0", features = ["server", "transport-streamable-http-server", "macros", "schemars"] }
axum = "0.8"
subtle = "2"
tokio-util = "0.7"
schemars = "1"
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
socket2 = "0.5"
futures-util = "0.3.32"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "0.26"
async-trait = "0.1.89"
quick-xml = { version = "0.39.2", features = ["serialize"] }
rusqlite = { version = "0.32", features = ["bundled"] }
mailparse = "0.15"
regex = "1"
# RFC 5545 RRULE parsing + occurrence enumeration. We feed `RRuleSet`
# the original VEVENT block (DTSTART, RRULE, EXDATE, RDATE) and ask
# for the occurrences inside the requested window — see
# `mcp::server::expand_recurring_event`. iCloud and Apple Calendar
# emit recurrence patterns that the master `start_date` alone cannot
# express ("Erica Tutoring" weekly Thursdays from a fixed master),
# and without expansion every recurring event after the master is
# invisible to MCP `list_events` window filters.
rrule = "0.14"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util", "macros"] }
insta = { version = "1", features = ["json", "yaml"] }
wiremock = "0.6"
tempfile = "3"
pretty_assertions = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3
